Fix table background for dark mode

--- a/resources/css/elements/tables.css
+++ b/resources/css/elements/tables.css
@@ -29,7 +29,7 @@
     }
 
     tbody {
-        @apply text-sm dark:bg-gray-900 shadow-sm rounded-xl outline-none;
+        @apply text-sm shadow-sm rounded-xl outline-none;
         .contained & {
             @apply shadow-none rounded-none;
         }
@@ -70,7 +70,7 @@
             }
 
             td {
-                @apply bg-white;
+                @apply bg-white dark:bg-gray-900;
                 @apply pl-4.5 pr-2.5 py-3 border-t border-gray-200 dark:border-white/10;
                 @apply text-gray-900 dark:text-gray-200;
             }
